# setuptools-skunkworks

./: README.md  pyproject.toml  setuptools_skunkworks.py
debian/: changelog  control  copyright
debian/upstream/: metadata
